# bitsrun-rs

./: .gitignore  Cargo.toml  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
debian/: bitsrun.service  bitsrun@.service
src/: cli.rs  client.rs  config.rs  daemon.rs  main.rs  tables.rs  user.rs  xencode.rs
