[package]
name = "bitsrun"
description = "A headless login and logout CLI app for 10.0.0.55 at BIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hmac = "0.12"
md-5 = "0.10"
base64 = "0.21"
sha1 = "0.10"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
