[package]
name = "bitsrun"
description = "A headless login and logout CLI app for 10.0.0.55 at BIT"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/spencerwooo/bitsrun-rs"
documentation = "https://github.com/spencerwooo/bitsrun-rs"
repository = "https://github.com/spencerwooo/bitsrun-rs"
readme = "README.md"
keywords = ["bit", "bitsrun", "srun", "srun-client", "srun-login"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls", # in favor of native openssl
], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hmac = "0.12"
md-5 = "0.10"
base64 = "0.21"
sha1 = "0.10"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
owo-colors = "3"
rpassword = "7.3"
rprompt = "2.1"
tabled = { version = "0.14", features = ["color"] }
humansize = "2.1"
chrono-humanize = "0.2"
chrono = "0.4"

[profile.release]
strip = "symbols"
